# package

./: .gitignore  Huawei Integrity Root CA - G2.der  README.md  pyproject.toml
certs/: huawei_integrity_root_ca_g2.pem
config/: packages.template.yaml  packages.yaml
docs/: ARCHITECTURE_DESIGN.md  DEVELOPER_GUIDE.md  LOCAL_MCP_BRIDGE_MANUAL_TEST_GUIDE.md  OPENCODE_NL_ACCEPTANCE_25_3_0.md  REMOTE_MCP_OPERATION_GUIDE.md  TESTING_GUIDE.md
docs/puml/: architecture_component.puml  build_pipeline_activity.puml  cli_to_install_sequence.puml  config_loader_activity.puml  core_class_detail.puml  downloader_activity.puml  error_exitcode_state.puml  install_state_lock_activity.puml  installer_template_activity.puml  mcp_guarded_install_sequence.puml  mcp_remote_deployment_view.puml  offline_local_or_download_activity.puml  porting_advisor_installer_activity.puml  porting_cli_rpm_installer_activity.puml  precheck_version_switch_activity.puml  resolver_decision_activity.puml  runtime_overall_activity.puml  (+1 more)
scripts/: build.sh  e2e_cases.sh  generate_mcp_token.py  package-manager-source-wrapper.sh  pm_offline_stage_and_upload.py  quick_start.sh  start_mcp_server.sh
tests/: test_config_runtime.py  test_control_plane.py  test_downloader.py  test_file_lock.py  test_install_state.py  test_installer_flow.py  test_installer_service.py  test_main.py  test_mcp_server_auth.py  test_mcp_server_e2e.py  test_p7s_verifier.py  test_paths.py  test_porting_advisor_layout.py  test_porting_advisor_layout_modern.py  test_porting_cli_urls.py  test_registry.py  test_resolver.py
(+26 files in other folders)
