[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "package-installer"
version = "0.1.0"
description = "Built-in config package installer with P7S verification"
requires-python = ">=3.9"
readme = "README.md"
dependencies = [
  "PyYAML>=6.0",
  "pydantic>=2.0,<3.0",
]

[project.scripts]
package-installer = "package_manager.main:main"
package-mcp-server = "package_manager.mcp_server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
